Fix column spacing and layout obn homepage

--- a/docs/new-site-build/main.css
+++ b/docs/new-site-build/main.css
@@ -28,6 +28,9 @@
 body {
   line-height: 1.4;
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
+  background: white;
+  color: #524740;
+  font-size: 1em;
 }
 
 a {
@@ -37,6 +40,10 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+p {
+  font-size: 1.25em
 }
 
 /* ===========================================
@@ -50,24 +57,44 @@ img {
 }
 
 .row {
-  margin-right: -1em;
-  margin-left: -1em;
+  margin-right: -1.5em;
+  margin-left: -1.5em;
 }
 
 .col {
   float: left;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding-left: 1.5em;
+  padding-right: 1.5em;
 }
 
 .col-1-5  { width: 20%; }
 .col-1-4  { width: 25%; }
 .col-1-3  { width: 33.33333333%; }
+.col-2-5  { width: 40%; }
 .col-1-2  { width: 50%; }
+.col-3-5  { width: 60%; }
 .col-2-3  { width: 66.66666666%; }
 .col-3-4  { width: 75%; }
 .col-4-5  { width: 80%; }
 .col-full { width: 100%; }
+
+/* ===========================================
+   Typography
+   =========================================== */
+
+h1, h2, h3, h4, h5, h6, p {
+  margin-top: 0;
+}
+
+h2 {
+  font-weight: 400;
+}
+
+pre {
+  background: #eeeeee;
+  border-radius: 15px;
+  padding: 1em;
+}
 
 /* ===========================================
    Header
@@ -127,6 +154,26 @@ header a {
   margin-top: .5em;
 }
 
+/* ===========================================
+   Theme
+   =========================================== */
+
+.stripe {
+  overflow: hidden;
+  padding: 4em 0;
+}
+
+.stripe--light {
+  background: white;
+}
+
+.stripe--dark {
+  background: #eeeeee;
+}
+
+.stripe a {
+  color: #b09679;
+}
 
 
 
